Fix alert message location on prov saves
In support of the prov editor saving, change the location of the
`.alert-container` div to be injected into the `body` instead of the
`section.metadata-container`. This prevents the message from scrolling
off screen.  Center it in a fixed position.

refs #366

--- a/metacatui/src/main/webapp/css/metacatui-common.css
+++ b/metacatui/src/main/webapp/css/metacatui-common.css
@@ -1478,8 +1478,13 @@ img.icon{
 	margin-bottom: 0px;
 	
 }
-#metadata-container > .alert-container{
-	margin-top: 40px;
+body > .alert-container {
+    position: fixed;
+    top: 115px;
+    left: 50%;
+    min-width: 75%;
+    z-index: 1;
+    transform: translateX(-50%);
 }
 /* Hide the elements from the view service that we don't need to display */
 #metadata-container .citation,
